Fix spinning AWSOME text to fill box properly on mobile by using fixed font-size

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ span{
     height: 200px;
     background-color: #FFFDD0;
     text-align: center;
-    font-size: clamp(80px, 15vw, 200px);
+    font-size: 200px;
     margin-top: 450px;
     animation: AwsomeRotate;
     animation-duration: 2s;
